# low-ram-notifier

./: Cargo.toml  low-ram-notifier@.service  readme.md
.github/workflows/: release.yml
src/: main.rs
