[package]
name = "low-ram-notifier"
version = "0.1.1"
authors = ["Davvos11"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
sysinfo = "0.30.5"
clap = { version = "4.4.13", features = ["derive"] }
human_bytes = "0.4"